infrastructure/galasa-plan-b-lon02/galasa-development/github-copyright/github-app-copyright-deployment.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: githubappcopyright
  namespace: galasa-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: githubappcopyright
  template:
    metadata:
      labels:
        app: githubappcopyright
    spec:
      containers:
        - command:
            - copyright
          image: 'harbor.galasa-plan-b-lon02-3fdc13787e8248a7d32fa4e5af5b0294-0000.eu-gb.containers.appdomain.cloud/galasadev/galasa-copyright:latest'
          name: copyright
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /galasa
              name: key
              readOnly: true
      volumes:
        - name: key
          secret:
            secretName: github-copyright-app-key
