infrastructure/galasa-plan-b-lon02/galasa-development/github-copyright/github-app-copyright-service.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: githubappcopyright
  namespace: galasa-development
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    app: githubappcopyright
  type: ClusterIP
