infrastructure/galasa-plan-b-lon02/galasa-development/github-copyright/github-app-copyright-ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-app-copyright-ingress
  namespace: galasa-development
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - copyright.galasa-plan-b-lon02-3fdc13787e8248a7d32fa4e5af5b0294-0000.eu-gb.containers.appdomain.cloud
    secretName: argocd-server-tls
  rules:
  - host: copyright.galasa-plan-b-lon02-3fdc13787e8248a7d32fa4e5af5b0294-0000.eu-gb.containers.appdomain.cloud
    http:
      paths:
      - backend:
          service:
            name: githubappcopyright
            port:
              number: 443
        path: /
        pathType: Prefix
